syntax = "proto3";
import "rococo-country.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService{
  rpc GetAllArtists(AllArtistsRequest) returns (AllArtistsResponse){}
  rpc GetArtistById(GetArtistRequest) returns (Artist){}
  rpc AddArtist(Artist) returns (Artist){}
  rpc UpdateArtist(Artist) returns(Artist){}
}

message AllArtistsRequest{
  int32 page = 1;
  int32 size = 2;
  string name = 3;
}
message GetArtistRequest{
  string id = 1;
}

message AllArtistsResponse{
  repeated Artist artist = 1;
  int64 total_count = 2;
}

message Artist{
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}
