syntax = "proto3";

package guru.qa.grpc.rococo;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoCountryProto";

service RococoCountryService{
  rpc GetCountries(CountriesRequest) returns (CountriesResponse) {}
  rpc GetCountryById(CountryByIdRequest) returns (Country){}
  rpc GetCountryByName(CountryByNameRequest) returns (Country){}
}

message CountriesRequest{
  int32 page = 1;
  int32 size = 2;
}

message CountriesResponse{
  repeated Country country = 1;
  int64 total_count = 2;
}

message Country{
  string id = 1;
  string name = 2;
}

message CountryByIdRequest{
  string id = 1;
}

message CountryByNameRequest{
  string name = 1;
}
